--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ attrs==25.4.0
 certifi==2026.1.4
 charset-normalizer==3.4.4
 colorama==0.4.6
-filelock==3.24.3
+filelock>=3.24.3
 frozenlist==1.8.0
 fsspec==2026.2.0
 idna==3.11
