--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -7,19 +7,32 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: '3.11'
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install build
+        # Architect's Note: Install Torch first, then the GNN extensions using the optimized wheel link
+        pip install torch>=2.10.0
+        pip install pyg_lib torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.10.0+cpu.html
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
     - name: Build package
       run: python -m build
+
     - name: Upload artifacts to Release
       uses: softprops/action-gh-release@v1
       with:
         files: dist/*
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
