--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -16,13 +16,13 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11'
+        python-version: '3.11' # This fixes the networkx error
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install build
-        # Architect's Note: Install Torch first, then the GNN extensions using the optimized wheel link
+        # Install acceleration libraries for Edge AI
         pip install torch>=2.10.0
         pip install pyg_lib torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.10.0+cpu.html
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
