--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,9 +22,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build
-        # Changed from 2.10.0 to 2.8.0 to match the public registry
+        
+        # 1. Install Torch first
         pip install torch>=2.8.0
-        pip install pyg_lib torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.8.0+cpu.html
+        
+        # 2. Install PyG Acceleration Kernels using the dedicated PyG link
+        # Note: Using the 'cpu' link for the GitHub runner to ensure compatibility
+        pip install pyg_lib torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.10.0+cpu.html
+        
+        # 3. Install remaining requirements
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Build package
