--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # --- Core Deep Learning & GNN (Edge Optimized) ---
-torch>=2.8.0
+torch>=2.10.0
 torch-geometric>=2.7.0
-# PyG Acceleration Kernels (Critical for Edge Performance)
+# Note: Acceleration kernels are handled by the -f flag in the workflow
 pyg-lib
 torch-scatter
 torch-sparse
